spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,15 @@ td {
   text-align: center;
 }
 
+#floating-panel {
+  margin-bottom: 5px;
+}
+
 #logo-image{
   width:150px;
   height: 150px;
   margin-left:110px;
-  margin-top: -90px;
+  margin-top: -80px;
 }
 
 #art-display {
@@ -109,9 +113,9 @@ td {
 
 .PageHeader{
 	text-align: center;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px;
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 10px; */
 }
 
 .socialImg {
